# fastapi-template

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml
app/: main.py
app/api/v1/: routes_users.py
app/core/: config.py
app/crud/: user.py
app/db/: session.py
app/db/models/: __init__.py  user.py
app/schemas/: user.py
app/services/: user_service.py
migrations/: env.py
migrations/versions/: aadbbcd7f347_create_user_table.py  c4d4bb231590_init.py
